--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.1",
     "react-scripts": "4.0.3",
