--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "history": "4.7.2",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
