--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "jjalbang",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://13.209.85.96",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "connected-react-router": "6.8.0",
+    "firebase": "^9.6.1",
+    "firebase-tools": "^9.23.1",
+    "global": "^4.4.0",
     "history": "4.7.2",
     "immer": "^9.0.7",
     "lodash": "^4.17.21",
